// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delay autorun until end of transaction 1`] = `
Array [
  Object {
    "name": "a",
    "newValue": 3,
    "objectName": "ObservableObject@1",
    "observableKind": "object",
    "oldValue": 2,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  Object {
    "name": "a",
    "newValue": 4,
    "objectName": "ObservableObject@1",
    "observableKind": "object",
    "oldValue": 3,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "end1",
  Object {
    "name": "a",
    "newValue": 5,
    "objectName": "ObservableObject@1",
    "observableKind": "object",
    "oldValue": 4,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "end2",
  Object {
    "name": "test",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  "calc y",
  Object {
    "newValue": 5,
    "objectName": "ObservableObject@1.b",
    "observableKind": "computed",
    "oldValue": CaughtException {
      "cause": null,
    },
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans1",
  Object {
    "name": "a",
    "newValue": 6,
    "objectName": "ObservableObject@1",
    "observableKind": "object",
    "oldValue": 5,
    "spyReportStart": true,
    "type": "update",
  },
  "calc y",
  Object {
    "newValue": 6,
    "objectName": "ObservableObject@1.b",
    "observableKind": "computed",
    "oldValue": 5,
    "type": "update",
  },
  Object {
    "name": "test",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans2",
  Object {
    "name": "a",
    "newValue": 3,
    "objectName": "ObservableObject@1",
    "observableKind": "object",
    "oldValue": 6,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans3",
]
`;

exports[`issue 50 1`] = `
Array [
  "auto",
  "calc c",
  "transstart",
  Object {
    "name": "a",
    "newValue": false,
    "objectName": "ObservableObject@1",
    "observableKind": "object",
    "oldValue": true,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  Object {
    "name": "b",
    "newValue": true,
    "objectName": "ObservableObject@1",
    "observableKind": "object",
    "oldValue": false,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpreend",
  Object {
    "name": "ar",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  "calc c",
  Object {
    "newValue": true,
    "objectName": "ObservableObject@1.c",
    "observableKind": "computed",
    "oldValue": false,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpostend",
]
`;

exports[`verify transaction events 1`] = `
Array [
  "auto",
  "calc c",
  "transstart",
  Object {
    "name": "b",
    "newValue": 2,
    "objectName": "ObservableObject@1",
    "observableKind": "object",
    "oldValue": 1,
    "spyReportStart": true,
    "type": "update",
  },
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpreend",
  "calc c",
  Object {
    "newValue": 2,
    "objectName": "ObservableObject@1.c",
    "observableKind": "computed",
    "oldValue": 1,
    "type": "update",
  },
  Object {
    "name": "ar",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  Object {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpostend",
]
`;
